<?xml version="1.0"?>
<package>
  <name>rose_server_multiple_client</name>
  <version>1.0.0</version>
  <description>Metapackage for the ROS Packages for the rose_server_multiple_client package</description>

  <author email="hendriks@robot-rose.nl">Okke Hendriks</author>
  <maintainer email="hendriks@robot-rose.nl">Okke Hendriks</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>server_multiple_client_msgs</run_depend>
  <run_depend>server_multiple_client</run_depend>

  <export>
    <metapackage />
  </export>
</package>
